# igo

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  config.go  go.mod  go.sum  igo.go  model.go  push.go  session.go
cmd/igo/: BUILD.bazel  common.go  config.go  drive.go  login.go  main.go  vars.go
internal/common/buildinfo/: BUILD.bazel  buildinfo.go
internal/common/cookiejar/: BUILD.bazel  jar.go  punycode.go
internal/common/log/: BUILD.bazel  logger.go
internal/service/: BUILD.bazel  service.go
internal/service/drive/: BUILD.bazel  drive.go  model.go
internal/service/push/: BUILD.bazel  push.go
internal/session/: model.go  session.go
